project(astar)
cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -ffast-math -w -O3")
find_package(OpenCV REQUIRED)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui)
include_directories(/home/ugv-yu/bryan/hybrid-astar-planner/include)
message(hell=============o    ${OpenCV_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
aux_source_directory("./src" SOURCE_LIST)
add_library(${PROJECT_NAME} SHARED ${SOURCE_LIST})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
add_executable(main test.cpp)
target_link_libraries(main ${OpenCV_LIBS} ${PROJECT_NAME})
