project(astar)
cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -ffast-math -w -O3")
find_package(OpenCV REQUIRED)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${OpenCV_INCLUDE_DIRS})
aux_source_directory("./src" SOURCE_LIST)
add_library(${PROJECT_NAME} SHARED ${SOURCE_LIST})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
add_executable(test test.cpp)
target_link_libraries(test ${OpenCV_LIBS} ${PROJECT_NAME})
